scripts/gtopt_check_pampl/examples/errors/bad_params.pampl
# =============================================================================
# Error: Param declaration issues
# =============================================================================
# Various issues with parameter declarations.

# Param missing '=' (has semicolon though)
param orphan;

# Monthly param with wrong index dimension
param seasonal[year] = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12];

# Missing comparison operator in constraint expression
constraint no_operator:
  generator('G1').generation + generator('G2').generation;
